# CryptoLLM_Experiment

./: .env.example  .gitignore  .pre-commit-config.yaml  Data Retrieve Option.py  Dockerfile  FIX_GIT_PUSH.md  Makefile  README.md  config.yaml  pyproject.toml
.github/workflows/: ci.yml  daily.yml
data/: market_latest.parquet
logs/: allocations.parquet  nav.parquet
reports/: latest.md  metrics.json
src/crypto_research/: __init__.py  __main__.py
strategy/: btc_start_tsm_v1.ipynb  btc_strat_tsm_eq.ipynb  btc_strategy_TSM.ipynb  btc_strategy_v1.ipynb  top_mcap_crypto_start.ipynb
